# wireguard-net

./: .gitignore  ARCHITECTURE.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  WEB_QUICKSTART.md  api_server.py  config.py  config_generator.py  database.py  init_db.py  install.sh  ip_allocator.py  main.py  node_manager.py  pyproject.toml  server_init.py  wg_toolkit_cli.py
.qoder/quests/: wireguard-network-toolkit.md
.qoder/rules/: API.md  code.md
cli/commands/: export.py  init.py  node.py  server.py
config/: base.py  cli.py  web.py
core/domain/: node.py  server.py
core/models/: database.py
core/models/repositories/: node_repo.py  server_repo.py
core/services/: config_service.py  node_service.py  server_service.py
core/utils/: config_generator.py  ip_allocator.py  key_manager.py  privileged_executor.py
doc/: API_REFERENCE.md  CLI_REFERENCE.md  DEVELOPMENT.md  MIGRATION.md  PROJECT_RESTRUCTURE.md  PROJECT_SUMMARY.md  UV_USAGE.md
scripts/: init_db.py  install.sh  start_web.sh  test_sudo_support.py  test_uv.sh  test_uv_check.sh
web/backend/: main.py
web/backend/api/v1/: downloads.py  nodes.py  server.py
web/backend/schemas/: common.py  node.py  server.py
web/frontend/: README.md  package-lock.json  package.json  vite.config.ts
web/frontend/src/: main.ts
web/frontend/src/api/: downloads.ts  http.ts  nodes.ts  server.ts
web/frontend/src/router/: index.ts
web/frontend/src/stores/: nodes.ts  server.ts
web/frontend/src/types/: api.ts  node.ts  server.ts
web/frontend/src/utils/: download.ts  format.ts  validator.ts
(+9 files in other folders)
